Some release format fixed

--- a/src/eda/EDA.ipynb
+++ b/src/eda/EDA.ipynb
@@ -13,6 +13,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c3bce51b",
+   "metadata": {},
+   "source": [
+    "Get the Sample data to be verified"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "838758fc",
@@ -93,6 +102,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5bc99973",
+   "metadata": {},
+   "source": [
+    "Run the profiler to explore de data features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "ea11f3c2",
@@ -161,6 +179,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "237d9bce",
+   "metadata": {},
+   "source": [
+    "Drop the prices that are off range"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "bbee06ef",
@@ -174,6 +201,15 @@
     "df = df[idx].copy()\n",
     "# Convert last_review to datetime\n",
     "df['last_review'] = pd.to_datetime(df['last_review'])\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "51564fcd",
+   "metadata": {},
+   "source": [
+    "Provide data frame summary info"
    ]
   },
   {
@@ -214,6 +250,15 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "77d7a073",
+   "metadata": {},
+   "source": [
+    "Finish the run to upload the data to wandb"
    ]
   },
   {
